# velo2cam_calibration

./: CMakeLists.txt  README-opencv.md
include/: velo2cam_utils.h
launch/: error.txt  lidar_pattern_gazebo.launch  lidar_pattern_rdv.launch  lidar_pattern_replica.launch  mono_pattern_gazebo.launch  mono_pattern_rdv.launch  mono_pattern_replica.launch  registration_rdv.launch  registration_replica.launch  result.txt
results/: 01_2024-03-18-21-31-02.txt  02_2024-03-18-21-33-10.txt  03_2024-03-18-21-34-35.txt  04_2024-03-18-21-47-28.txt  Gazebo.txt
rviz/: default.rviz
src/: lidar_pattern.cpp  mono_qr_pattern.backup.original  mono_qr_pattern.cpp  mono_qr_pattern.revising  velo2cam_calibration.cpp
